# NgramTable

./: .gitignore  LICENSE  README.md  analyze_trie.py  batch_acceptance_20260307_100013.json  benchmark_results.json  benchmark_transformer.py  compare_results.json  hash_vs_kmp_results.json  lookahead方案.md  ngram_proposer.py  py_suffix_tree.py  pyproject.toml  requirements.txt  requirements_transformer.txt  single_repro_20260307_101419.json  single_seq_results.json  skipgram_方案说明.md  suffix_decoding.py  suffix_minmatch_results.json  test_batch_acceptance.py  test_cache_compare.py  test_compare.py  test_debug_divergence.py  test_hash_vs_kmp.py  test_ngram.py  test_numba_hash.py  test_reproducibility.py  test_result_v0.md  test_result_v0_0.5B.json  test_result_v0_3B.json  test_single_seq.py  test_suffix_minmatch.py  test_transformer.py
.claude/: settings.local.json
analysis/trie_analysis/: trie_analysis.md
benchmarks/: test_ngram.py  test_pysuffix.py  test_pysuffix_consistency.py  test_pysuffix_vs_cpp.py  test_single_repro.py  test_trie_nodesize.py
benchmarks/results/: pysuffix_results.json  pysuffix_vs_cpp.json  reproducibility_results.json  suffix_minmatch_results.json  (+1 more)
docs/: ngram_speculative_decoding.pptx  ngram_speculative_decoding.py  suffix方案分析.md  现有方案分析.md
results/: hash_vs_kmp_qwen0.5b_results.json  hash_vs_kmp_qwen3b_results.json  offline_batch_benchmark.json  offline_batch_benchmark.md  online_serving_benchmark.json  online_serving_benchmark.md  transformer_benchmark.json
speculative/: __init__.py  engine.py  metrics.py  verifier.py
(+5 files in other folders)
