[project]
name = "ngram-speculative"
version = "0.1.0"
description = "N-gram speculative decoding benchmark — transformer backend, macOS compatible"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "accelerate>=0.27.0",
    "huggingface-hub>=0.21.0",
]

[dependency-groups]
dev = []
